AUT-805 Use Web eID for ID card authentication
