# src/main/java/ee/ria/taraauthserver/authentication/idcard/SessionBackedChallengeNonceStore.java
@@ -1,0 +1,39 @@
+package ee.ria.taraauthserver.authentication.idcard;
+
+import ee.ria.taraauthserver.session.TaraSession;
+import eu.webeid.security.challenge.ChallengeNonce;
+import eu.webeid.security.challenge.ChallengeNonceStore;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.ObjectFactory;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Service;
+
+import javax.servlet.http.HttpSession;
+
+@ConditionalOnProperty(value = "tara.auth-methods.id-card.enabled")
+@Service
+@RequiredArgsConstructor
+public class SessionBackedChallengeNonceStore implements ChallengeNonceStore {
+
+    @NonNull
+    final ObjectFactory<HttpSession> httpSessionFactory;
+
+    @Override
+    public void put(ChallengeNonce challengeNonce) {
+        currentSession().setWebEidChallengeNonce(challengeNonce);
+    }
+
+    @Override
+    public ChallengeNonce getAndRemoveImpl() {
+        TaraSession taraSession = currentSession();
+        final ChallengeNonce challengeNonce = taraSession.getWebEidChallengeNonce();
+        taraSession.setWebEidChallengeNonce(null);
+        return challengeNonce;
+    }
+
+    private TaraSession currentSession() {
+        return (TaraSession) httpSessionFactory.getObject().getAttribute(TaraSession.TARA_SESSION);
+    }
+
+}
